--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.8.5",
+    "@nuxt/image": "^1.0.0",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.7.4",
     "nuxt-icon": "^0.5.0",
