--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "postcss": "^8.4.31",
     "sass": "^1.69.4",
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "@vercel/analytics": "^1.2.2"
   }
 }
